{
  "version": 4,
  "terraform_version": "1.4.0",
  "serial": 359,
  "lineage": "e57f434c-db16-d38b-2c2b-ef873fe6c625",
  "resources": [
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_eip",
      "name": "dev_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0aff3963a2ef1f545",
            "domain": "vpc",
            "id": "eipalloc-0aff3963a2ef1f545",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-229-0-73.compute-1.amazonaws.com",
            "public_ip": "3.229.0.73",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev-eip"
            },
            "tags_all": {
              "Name": "dev-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026670195391:internet-gateway/igw-016c8623a95d88b41",
            "id": "igw-016c8623a95d88b41",
            "owner_id": "026670195391",
            "tags": {
              "name": "dev-IGW"
            },
            "tags_all": {
              "name": "dev-IGW"
            },
            "vpc_id": "vpc-0cf618ac195b9ad87"
          },
          "dependencies": [
            "module.VPC.aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "dev_natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0aff3963a2ef1f545",
            "connectivity_type": "public",
            "id": "nat-0f77c87877bfdf98c",
            "network_interface_id": "eni-09a60d5dbe69933e3",
            "private_ip": "172.20.1.132",
            "public_ip": "3.229.0.73",
            "subnet_id": "subnet-0a91a3226f61c6d8d",
            "tags": {
              "Name": "dev-NATGW"
            },
            "tags_all": {
              "Name": "dev-NATGW"
            }
          },
          "dependencies": [
            "module.VPC.aws_eip.dev_eip",
            "module.VPC.aws_internet_gateway.igw",
            "module.VPC.aws_subnet.private_subs",
            "module.VPC.aws_subnet.public_subs",
            "module.VPC.aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "art_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026670195391:route-table/rtb-0203e3b2579e6ae5c",
            "id": "rtb-0203e3b2579e6ae5c",
            "owner_id": "026670195391",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f77c87877bfdf98c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "name": "dev-Private-Route-table"
            },
            "tags_all": {
              "name": "dev-Private-Route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cf618ac195b9ad87"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_eip.dev_eip",
            "module.VPC.aws_internet_gateway.igw",
            "module.VPC.aws_nat_gateway.dev_natgw",
            "module.VPC.aws_subnet.private_subs",
            "module.VPC.aws_subnet.public_subs",
            "module.VPC.aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "art_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026670195391:route-table/rtb-00c0b617c594f454a",
            "id": "rtb-00c0b617c594f454a",
            "owner_id": "026670195391",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-016c8623a95d88b41",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "name": "dev-Public-Route-table"
            },
            "tags_all": {
              "name": "dev-Public-Route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cf618ac195b9ad87"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_internet_gateway.igw",
            "module.VPC.aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_rta_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01bce7211a51d81f0",
            "route_table_id": "rtb-0203e3b2579e6ae5c",
            "subnet_id": "subnet-0752c88deacf0f43c"
          },
          "dependencies": [
            "module.VPC.aws_eip.dev_eip",
            "module.VPC.aws_internet_gateway.igw",
            "module.VPC.aws_nat_gateway.dev_natgw",
            "module.VPC.aws_route_table.art_private",
            "module.VPC.aws_subnet.private_subs",
            "module.VPC.aws_subnet.public_subs",
            "module.VPC.aws_vpc.dev_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0198f26e15ee9770b",
            "route_table_id": "rtb-0203e3b2579e6ae5c",
            "subnet_id": "subnet-0209e248c0f63800a"
          },
          "dependencies": [
            "module.VPC.aws_eip.dev_eip",
            "module.VPC.aws_internet_gateway.igw",
            "module.VPC.aws_nat_gateway.dev_natgw",
            "module.VPC.aws_route_table.art_private",
            "module.VPC.aws_subnet.private_subs",
            "module.VPC.aws_subnet.public_subs",
            "module.VPC.aws_vpc.dev_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07d3341fd02ca3af2",
            "route_table_id": "rtb-0203e3b2579e6ae5c",
            "subnet_id": "subnet-08505b30afdffe6e0"
          },
          "dependencies": [
            "module.VPC.aws_eip.dev_eip",
            "module.VPC.aws_internet_gateway.igw",
            "module.VPC.aws_nat_gateway.dev_natgw",
            "module.VPC.aws_route_table.art_private",
            "module.VPC.aws_subnet.private_subs",
            "module.VPC.aws_subnet.public_subs",
            "module.VPC.aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_rta_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00717c7b5dc3e434b",
            "route_table_id": "rtb-00c0b617c594f454a",
            "subnet_id": "subnet-0a91a3226f61c6d8d"
          },
          "dependencies": [
            "module.VPC.aws_internet_gateway.igw",
            "module.VPC.aws_route_table.art_public",
            "module.VPC.aws_subnet.private_subs",
            "module.VPC.aws_subnet.public_subs",
            "module.VPC.aws_vpc.dev_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cb5752f0c3006880",
            "route_table_id": "rtb-00c0b617c594f454a",
            "subnet_id": "subnet-0f9acd21dbab49504"
          },
          "dependencies": [
            "module.VPC.aws_internet_gateway.igw",
            "module.VPC.aws_route_table.art_public",
            "module.VPC.aws_subnet.private_subs",
            "module.VPC.aws_subnet.public_subs",
            "module.VPC.aws_vpc.dev_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a477456d8c9b0034",
            "route_table_id": "rtb-00c0b617c594f454a",
            "subnet_id": "subnet-0a8870cbfe9096373"
          },
          "dependencies": [
            "module.VPC.aws_internet_gateway.igw",
            "module.VPC.aws_route_table.art_public",
            "module.VPC.aws_subnet.private_subs",
            "module.VPC.aws_subnet.public_subs",
            "module.VPC.aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026670195391:subnet/subnet-0752c88deacf0f43c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.20.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0752c88deacf0f43c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "026670195391",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-PrivateSubnet-1"
            },
            "tags_all": {
              "Name": "dev-PrivateSubnet-1"
            },
            "vpc_id": "vpc-0cf618ac195b9ad87"
          },
          "dependencies": [
            "module.VPC.aws_vpc.dev_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026670195391:subnet/subnet-0209e248c0f63800a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.20.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0209e248c0f63800a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "026670195391",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-PrivateSubnet-2"
            },
            "tags_all": {
              "Name": "dev-PrivateSubnet-2"
            },
            "vpc_id": "vpc-0cf618ac195b9ad87"
          },
          "dependencies": [
            "module.VPC.aws_vpc.dev_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026670195391:subnet/subnet-08505b30afdffe6e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.20.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08505b30afdffe6e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "026670195391",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-PrivateSubnet-3"
            },
            "tags_all": {
              "Name": "dev-PrivateSubnet-3"
            },
            "vpc_id": "vpc-0cf618ac195b9ad87"
          },
          "dependencies": [
            "module.VPC.aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026670195391:subnet/subnet-0a91a3226f61c6d8d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.20.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a91a3226f61c6d8d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "026670195391",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": " dev-PublicSubnet-1"
            },
            "tags_all": {
              "Name": " dev-PublicSubnet-1"
            },
            "vpc_id": "vpc-0cf618ac195b9ad87"
          },
          "dependencies": [
            "module.VPC.aws_vpc.dev_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026670195391:subnet/subnet-0f9acd21dbab49504",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.20.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f9acd21dbab49504",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "026670195391",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": " dev-PublicSubnet-2"
            },
            "tags_all": {
              "Name": " dev-PublicSubnet-2"
            },
            "vpc_id": "vpc-0cf618ac195b9ad87"
          },
          "dependencies": [
            "module.VPC.aws_vpc.dev_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026670195391:subnet/subnet-0a8870cbfe9096373",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.20.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a8870cbfe9096373",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "026670195391",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": " dev-PublicSubnet-3"
            },
            "tags_all": {
              "Name": " dev-PublicSubnet-3"
            },
            "vpc_id": "vpc-0cf618ac195b9ad87"
          },
          "dependencies": [
            "module.VPC.aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026670195391:vpc/vpc-0cf618ac195b9ad87",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-01eed40ccbc7c68cc",
            "default_route_table_id": "rtb-0ea9c34fb439a38b1",
            "default_security_group_id": "sg-028076b3dc6a08bda",
            "dhcp_options_id": "dopt-0019f6dd44a089439",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cf618ac195b9ad87",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ea9c34fb439a38b1",
            "owner_id": "026670195391",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc"
            }
          }
        }
      ]
    }
  ]
}